5/pjpParser.py
# Generated from ../pjp.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class pjpParser ( Parser ):

    grammarFileName = "pjp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'float'", "'string'", "'bool'", 
                     "'='", "'!='", "'<'", "'>'", "'%'", "'*'", "'/'", "'+'", 
                     "'-'", "'?'", "':'", "'&&'", "'||'", "'!'", "';'", 
                     "','", "'read'", "'write'", "'if'", "'else'", "'while'", 
                     "'for'", "'{'", "'}'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "EQ", "NEQ", "LT", "GT", "MOD", "TIMES", 
                      "DIVIDE", "PLUS", "MINUS", "QUESTION", "DOUBLEDOT", 
                      "AND", "OR", "NOT", "SEMICOLON", "COMMA", "READ", 
                      "WRITE", "IF", "ELSE", "WHILE", "FOR", "LBRACE", "RBRACE", 
                      "LPAREN", "RPAREN", "ID", "INTEGER", "FLOAT", "STRING", 
                      "BOOLEAN", "WS", "COMMENT" ]

    RULE_prog = 0
    RULE_type = 1
    RULE_variables = 2
    RULE_literals = 3
    RULE_statement = 4
    RULE_expression = 5

    ruleNames =  [ "prog", "type", "variables", "literals", "statement", 
                   "expression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    EQ=5
    NEQ=6
    LT=7
    GT=8
    MOD=9
    TIMES=10
    DIVIDE=11
    PLUS=12
    MINUS=13
    QUESTION=14
    DOUBLEDOT=15
    AND=16
    OR=17
    NOT=18
    SEMICOLON=19
    COMMA=20
    READ=21
    WRITE=22
    IF=23
    ELSE=24
    WHILE=25
    FOR=26
    LBRACE=27
    RBRACE=28
    LPAREN=29
    RPAREN=30
    ID=31
    INTEGER=32
    FLOAT=33
    STRING=34
    BOOLEAN=35
    WS=36
    COMMENT=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(pjpParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pjpParser.StatementContext)
            else:
                return self.getTypedRuleContext(pjpParser.StatementContext,i)


        def getRuleIndex(self):
            return pjpParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = pjpParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 12
                self.statement()
                self.state = 15 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 67359219742) != 0)):
                    break

            self.state = 17
            self.match(pjpParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pjpParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = pjpParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariablesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pjpParser.RULE_variables

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IdContext(VariablesContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.VariablesContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(pjpParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)



    def variables(self):

        localctx = pjpParser.VariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variables)
        try:
            localctx = pjpParser.IdContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self.match(pjpParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pjpParser.RULE_literals

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StringContext(LiteralsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.LiteralsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(pjpParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)


    class BoolContext(LiteralsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.LiteralsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOLEAN(self):
            return self.getToken(pjpParser.BOOLEAN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool" ):
                return visitor.visitBool(self)
            else:
                return visitor.visitChildren(self)


    class FloatContext(LiteralsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.LiteralsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FLOAT(self):
            return self.getToken(pjpParser.FLOAT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloat" ):
                listener.enterFloat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloat" ):
                listener.exitFloat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloat" ):
                return visitor.visitFloat(self)
            else:
                return visitor.visitChildren(self)


    class IntContext(LiteralsContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.LiteralsContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER(self):
            return self.getToken(pjpParser.INTEGER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt" ):
                return visitor.visitInt(self)
            else:
                return visitor.visitChildren(self)



    def literals(self):

        localctx = pjpParser.LiteralsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_literals)
        try:
            self.state = 27
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                localctx = pjpParser.IntContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 23
                self.match(pjpParser.INTEGER)
                pass
            elif token in [33]:
                localctx = pjpParser.FloatContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 24
                self.match(pjpParser.FLOAT)
                pass
            elif token in [34]:
                localctx = pjpParser.StringContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 25
                self.match(pjpParser.STRING)
                pass
            elif token in [35]:
                localctx = pjpParser.BoolContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 26
                self.match(pjpParser.BOOLEAN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pjpParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ReadContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def READ(self):
            return self.getToken(pjpParser.READ, 0)
        def variables(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pjpParser.VariablesContext)
            else:
                return self.getTypedRuleContext(pjpParser.VariablesContext,i)

        def SEMICOLON(self):
            return self.getToken(pjpParser.SEMICOLON, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(pjpParser.COMMA)
            else:
                return self.getToken(pjpParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead" ):
                listener.enterRead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead" ):
                listener.exitRead(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead" ):
                return visitor.visitRead(self)
            else:
                return visitor.visitChildren(self)


    class ForContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FOR(self):
            return self.getToken(pjpParser.FOR, 0)
        def LPAREN(self):
            return self.getToken(pjpParser.LPAREN, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pjpParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(pjpParser.ExpressionContext,i)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(pjpParser.SEMICOLON)
            else:
                return self.getToken(pjpParser.SEMICOLON, i)
        def RPAREN(self):
            return self.getToken(pjpParser.RPAREN, 0)
        def statement(self):
            return self.getTypedRuleContext(pjpParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor" ):
                listener.enterFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor" ):
                listener.exitFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor" ):
                return visitor.visitFor(self)
            else:
                return visitor.visitChildren(self)


    class ExprContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(pjpParser.ExpressionContext,0)

        def SEMICOLON(self):
            return self.getToken(pjpParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)


    class BlockContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LBRACE(self):
            return self.getToken(pjpParser.LBRACE, 0)
        def RBRACE(self):
            return self.getToken(pjpParser.RBRACE, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pjpParser.StatementContext)
            else:
                return self.getTypedRuleContext(pjpParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(pjpParser.WHILE, 0)
        def LPAREN(self):
            return self.getToken(pjpParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(pjpParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(pjpParser.RPAREN, 0)
        def statement(self):
            return self.getTypedRuleContext(pjpParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class DeclarationContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def type_(self):
            return self.getTypedRuleContext(pjpParser.TypeContext,0)

        def variables(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pjpParser.VariablesContext)
            else:
                return self.getTypedRuleContext(pjpParser.VariablesContext,i)

        def SEMICOLON(self):
            return self.getToken(pjpParser.SEMICOLON, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(pjpParser.COMMA)
            else:
                return self.getToken(pjpParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)


    class WriteContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WRITE(self):
            return self.getToken(pjpParser.WRITE, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pjpParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(pjpParser.ExpressionContext,i)

        def SEMICOLON(self):
            return self.getToken(pjpParser.SEMICOLON, 0)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(pjpParser.COMMA)
            else:
                return self.getToken(pjpParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite" ):
                listener.enterWrite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite" ):
                listener.exitWrite(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite" ):
                return visitor.visitWrite(self)
            else:
                return visitor.visitChildren(self)


    class IfContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(pjpParser.IF, 0)
        def LPAREN(self):
            return self.getToken(pjpParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(pjpParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(pjpParser.RPAREN, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pjpParser.StatementContext)
            else:
                return self.getTypedRuleContext(pjpParser.StatementContext,i)

        def ELSE(self):
            return self.getToken(pjpParser.ELSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)


    class EmptyContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SEMICOLON(self):
            return self.getToken(pjpParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmpty" ):
                listener.enterEmpty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmpty" ):
                listener.exitEmpty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmpty" ):
                return visitor.visitEmpty(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = pjpParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                localctx = pjpParser.EmptyContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 29
                self.match(pjpParser.SEMICOLON)
                pass
            elif token in [1, 2, 3, 4]:
                localctx = pjpParser.DeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 30
                self.type_()
                self.state = 31
                self.variables()
                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==20:
                    self.state = 32
                    self.match(pjpParser.COMMA)
                    self.state = 33
                    self.variables()
                    self.state = 38
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 39
                self.match(pjpParser.SEMICOLON)
                pass
            elif token in [13, 18, 29, 31, 32, 33, 34, 35]:
                localctx = pjpParser.ExprContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 41
                self.expression(0)
                self.state = 42
                self.match(pjpParser.SEMICOLON)
                pass
            elif token in [21]:
                localctx = pjpParser.ReadContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 44
                self.match(pjpParser.READ)
                self.state = 45
                self.variables()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==20:
                    self.state = 46
                    self.match(pjpParser.COMMA)
                    self.state = 47
                    self.variables()
                    self.state = 52
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 53
                self.match(pjpParser.SEMICOLON)
                pass
            elif token in [22]:
                localctx = pjpParser.WriteContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 55
                self.match(pjpParser.WRITE)
                self.state = 56
                self.expression(0)
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==20:
                    self.state = 57
                    self.match(pjpParser.COMMA)
                    self.state = 58
                    self.expression(0)
                    self.state = 63
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 64
                self.match(pjpParser.SEMICOLON)
                pass
            elif token in [27]:
                localctx = pjpParser.BlockContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 66
                self.match(pjpParser.LBRACE)
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 67359219742) != 0):
                    self.state = 67
                    self.statement()
                    self.state = 72
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 73
                self.match(pjpParser.RBRACE)
                pass
            elif token in [23]:
                localctx = pjpParser.IfContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 74
                self.match(pjpParser.IF)
                self.state = 75
                self.match(pjpParser.LPAREN)
                self.state = 76
                self.expression(0)
                self.state = 77
                self.match(pjpParser.RPAREN)
                self.state = 78
                self.statement()
                self.state = 81
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 79
                    self.match(pjpParser.ELSE)
                    self.state = 80
                    self.statement()


                pass
            elif token in [25]:
                localctx = pjpParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 83
                self.match(pjpParser.WHILE)
                self.state = 84
                self.match(pjpParser.LPAREN)
                self.state = 85
                self.expression(0)
                self.state = 86
                self.match(pjpParser.RPAREN)
                self.state = 87
                self.statement()
                pass
            elif token in [26]:
                localctx = pjpParser.ForContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 89
                self.match(pjpParser.FOR)
                self.state = 90
                self.match(pjpParser.LPAREN)
                self.state = 91
                self.expression(0)
                self.state = 92
                self.match(pjpParser.SEMICOLON)
                self.state = 93
                self.expression(0)
                self.state = 94
                self.match(pjpParser.SEMICOLON)
                self.state = 95
                self.expression(0)
                self.state = 96
                self.match(pjpParser.RPAREN)
                self.state = 97
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pjpParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class MinusContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MINUS(self):
            return self.getToken(pjpParser.MINUS, 0)
        def expression(self):
            return self.getTypedRuleContext(pjpParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMinus" ):
                listener.enterMinus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMinus" ):
                listener.exitMinus(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMinus" ):
                return visitor.visitMinus(self)
            else:
                return visitor.visitChildren(self)


    class OrContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pjpParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(pjpParser.ExpressionContext,i)

        def OR(self):
            return self.getToken(pjpParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr" ):
                listener.enterOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr" ):
                listener.exitOr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)


    class MuldivmodContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pjpParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(pjpParser.ExpressionContext,i)

        def TIMES(self):
            return self.getToken(pjpParser.TIMES, 0)
        def DIVIDE(self):
            return self.getToken(pjpParser.DIVIDE, 0)
        def MOD(self):
            return self.getToken(pjpParser.MOD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMuldivmod" ):
                listener.enterMuldivmod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMuldivmod" ):
                listener.exitMuldivmod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMuldivmod" ):
                return visitor.visitMuldivmod(self)
            else:
                return visitor.visitChildren(self)


    class VarContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def variables(self):
            return self.getTypedRuleContext(pjpParser.VariablesContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)


    class LtgtContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pjpParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pjpParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(pjpParser.ExpressionContext,i)

        def LT(self):
            return self.getToken(pjpParser.LT, 0)
        def GT(self):
            return self.getToken(pjpParser.GT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLtgt" ):
                listener.enterLtgt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLtgt" ):
                listener.exitLtgt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLtgt" ):
                return visitor.visitLtgt(self)
            else:
                return visitor.visitChildren(self)


    class AddsubContext(ExpressionContext):
